修复挂起/睡眠后假死的问题，添加ctrl+shift+win+G紧急唤醒

--- a/hypr/configs/Keybinds.conf
+++ b/hypr/configs/Keybinds.conf
@@ -23,6 +23,9 @@ bind = $mainMod, J, layoutmsg, cyclenext
 bind = $mainMod, K, layoutmsg, cycleprev
 bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
 
+# 紧急唤醒屏幕
+bind = $mainMod CTRL SHIFT, G, exec, $scriptsDir/Wake.sh
+
 # Dwindle Layout
 bind = $mainMod SHIFT, I, togglesplit # only works on dwindle layout
 bind = $mainMod, P, pseudo, # dwindle
