--- a/hypr/wallust/wallust-hyprland.conf
+++ b/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(1C1D1C)
-$foreground = rgb(F1F5F2)
-$color0 = rgb(424443)
-$color1 = rgb(111713)
-$color2 = rgb(28382A)
-$color3 = rgb(3B6936)
-$color4 = rgb(3B6936)
-$color5 = rgb(6CA152)
-$color6 = rgb(A1AAA3)
-$color7 = rgb(E3E9E4)
-$color8 = rgb(9FA39F)
-$color9 = rgb(161F1A)
-$color10 = rgb(354A38)
-$color11 = rgb(4E8C48)
-$color12 = rgb(4E8C48)
-$color13 = rgb(90D76E)
-$color14 = rgb(D7E3D9)
-$color15 = rgb(E3E9E4)
+$background = rgb(020002)
+$foreground = rgb(F8EEEE)
+$color0 = rgb(020002)
+$color1 = rgb(393439)
+$color2 = rgb(7F554D)
+$color3 = rgb(88625C)
+$color4 = rgb(6F9389)
+$color5 = rgb(AE9795)
+$color6 = rgb(B19B9A)
+$color7 = rgb(EDDFDE)
+$color8 = rgb(A69C9B)
+$color9 = rgb(4C454C)
+$color10 = rgb(A97167)
+$color11 = rgb(B6837A)
+$color12 = rgb(94C4B7)
+$color13 = rgb(E8C9C7)
+$color14 = rgb(ECCFCD)
+$color15 = rgb(EDDFDE)
