--- a/kitty/kitty-themes/01-Wallust.conf
+++ b/kitty/kitty-themes/01-Wallust.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #F1F5F2
-background         #1C1D1C
-cursor             #93A095
+foreground         #F8EEEE
+background         #020002
+cursor             #D1B0AA
 
-active_tab_foreground     #1C1D1C
-active_tab_background     #F1F5F2
-inactive_tab_foreground   #F1F5F2
-inactive_tab_background   #1C1D1C
+active_tab_foreground     #020002
+active_tab_background     #F8EEEE
+inactive_tab_foreground   #F8EEEE
+inactive_tab_background   #020002
 
-active_border_color   #F1F5F2
-inactive_border_color #1C1D1C
-bell_border_color     #111713
+active_border_color   #F8EEEE
+inactive_border_color #020002
+bell_border_color     #393439
 
-color0      #424443
-color1		#111713
-color2		#28382A
-color3		#3B6936
-color4		#3B6936
-color5		#6CA152
-color6		#A1AAA3
-color7		#E3E9E4
-color8		#9FA39F
-color9		#161F1A
-color10		#354A38
-color11		#4E8C48
-color12		#4E8C48
-color13		#90D76E
-color14		#D7E3D9
-color15		#E3E9E4
+color0      #020002
+color1		#393439
+color2		#7F554D
+color3		#88625C
+color4		#6F9389
+color5		#AE9795
+color6		#B19B9A
+color7		#EDDFDE
+color8		#A69C9B
+color9		#4C454C
+color10		#A97167
+color11		#B6837A
+color12		#94C4B7
+color13		#E8C9C7
+color14		#ECCFCD
+color15		#EDDFDE
