添加macOS动效，优化waybar，调整落霞文楷字体，在ISSUE.md中记录解决方法。

--- a/hypr/UserConfigs/ENVariables.conf
+++ b/hypr/UserConfigs/ENVariables.conf
@@ -1,10 +1,18 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
-# Environment variables. See https://wiki.hyprland.org/Configuring/Environment-variables/
+# Environment variables to load
+# See https://wiki.hyprland.org/Configuring/Variables/#environment-variables
 
 # Set your defaults editor through ENV in ~/.config/hypr/UserConfigs/01-UserDefaults.conf
 
 # environment-variables
 # Toolkit Backend Variables
+# env = GTK_THEME,Adwaita:dark
+env = GTK_THEME,WhiteSur-Dark
+env = GTK2_RC_FILES,$HOME/.gtkrc-2.0
+
+# Flatpak GTK themes
+env = GTK_USE_PORTAL,1
+
 env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
 env = CLUTTER_BACKEND,wayland
@@ -21,6 +29,7 @@ env = GLFW_IM_MODULE,ibus # For some games
 #env = SDL_VIDEODRIVER,wayland
 
 # xdg Specifications
+env = XDG_CONFIG_HOME,$HOME/.config
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
