--- a/hypr/UserConfigs/UserAnimations.conf
+++ b/hypr/UserConfigs/UserAnimations.conf
@@ -1,20 +1,36 @@
-# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
-#
-# name "Dynamic"
-# credit https://github.com/mylinuxforwork/dotfiles 
+# macOS-style animations with Genie Effect
+# https://wiki.hypr.land/Configuring/Animations/
 
 animations {
-    enabled = true
-    bezier = wind, 0.05, 0.9, 0.1, 1.05
-    bezier = winIn, 0.1, 1.1, 0.1, 1.1
-    bezier = winOut, 0.3, -0.3, 0, 1
-    bezier = liner, 1, 1, 1, 1
-    animation = windows, 1, 6, wind, slide
-    animation = windowsIn, 1, 6, winIn, slide
-    animation = windowsOut, 1, 5, winOut, slide
-    animation = windowsMove, 1, 5, wind, slide
-    animation = border, 1, 1, liner
-    animation = borderangle, 1, 30, liner, loop
-    animation = fade, 1, 10, default
-    animation = workspaces, 1, 5, wind
+    enabled = yes
+    
+    # macOS-style bezier curves
+    bezier = macosEaseInOut, 0.25, 0.1, 0.25, 1
+    bezier = macosGenie, 0.4, 0.0, 0.2, 1
+    bezier = macosSpring, 0.5, 1.25, 0.75, 1.25
+    bezier = macosSmooth, 0.25, 0.46, 0.45, 0.94
+    
+    # Window animations with Genie effect
+    animation = windowsIn, 1, 6, macosGenie, popin 60%
+    animation = windowsOut, 1, 8, macosGenie, popin 80%
+    animation = windowsMove, 1, 5, macosSmooth, slide
+    
+    # Special workspace animations (minimized windows)
+    animation = specialWorkspace, 1, 8, macosGenie, slidevert
+    
+    # Fade animations
+    animation = fadeIn, 1, 6, macosEaseInOut
+    animation = fadeOut, 1, 8, macosEaseInOut
+    animation = fadeDim, 1, 6, macosSmooth
+    animation = fadeSwitch, 1, 6, macosEaseInOut
+    animation = fadeShadow, 1, 6, macosEaseInOut
+    animation = fadeLayersIn, 1, 6, macosEaseInOut
+    animation = fadeLayersOut, 1, 8, macosEaseInOut
+    
+    # Workspace animations
+    animation = workspaces, 1, 6, macosSmooth, slide
+    
+    # Border animations
+    animation = border, 1, 8, macosEaseInOut
+    animation = borderangle, 1, 8, macosEaseInOut, once
 }
