--- a/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/UserConfigs/UserKeybinds.conf
@@ -28,10 +28,16 @@ bind = $mainMod, B, exec, xdg-open "https://"  # default browser
 bind = $mainMod, A, global, quickshell:overviewToggle # desktop overview (if installed)
 bind = $mainMod, Return, exec, $term  #terminal
 bind = $mainMod, E, exec, $files #file manager
-bind = $mainMod, M, exec, code #vscode
-bind = $mainMod, K, exec, kiro #kiro ide
+bind = $mainMod, C, exec, code #vscode
 bind = $mainMod, O, exec, flatpak run io.github.alainm23.planify # Planify (Flatpak)
 bind = $mainMod, I, exec, flatpak run com.github.gmg137.netease-cloud-music-gtk # 网易云音乐
+
+# ------------------ Minimize | Maxmize control ------------------
+# Hyprland "Minimize" (Move to special workspace)
+bind = $mainMod, M, exec, $scriptsDir/MacOSMinimize.sh
+# Toggle Special Workspace to see "minimized" windows
+bind = ALT, M, exec, $scriptsDir/MacOSRestore.sh
+# ------------------ END OF MIN/MAX ------------------
 
 # FEATURES / EXTRAS
 bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # help / cheat sheet
