--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -51,6 +51,12 @@ windowrule = tag +im, class:^(im.riot.Riot|Element)$ # Element Matrix client
 
 # Fcitx5 IME
 windowrulev2 = stayfocused, class:^(fcitx5-remote)$
+windowrulev2 = float, class:^(fcitx5-remote)$
+windowrulev2 = minsize 1 1, class:^(fcitx5-remote)$
+windowrulev2 = dimaround, class:^(fcitx5-remote)$
+windowrulev2 = noborder, class:^(fcitx5-remote)$
+windowrulev2 = noshadow, class:^(fcitx5-remote)$
+windowrulev2 = noblur, class:^(fcitx5-remote)$
 
 # game tags
 windowrule = tag +games, class:^(gamescope)$
@@ -169,13 +175,13 @@ windowrule = center, title:^(SDDM Background)$ #KooL's Dots YAD for setting SDDM
 windowrule = size 16% 12%, title:^(SDDM Background)$ #KooL's Dots YAD for setting SDDM background
 # END of float popups and dialogue #######
 
-# OPACITY
-windowrule = opacity 0.9 0.7, tag:browser*
+# OPACITY [活动透明度] [非活动透明度]
+windowrule = opacity 0.9 0.8, tag:browser*
 windowrule = opacity 0.9 0.8, tag:projects*
 windowrule = opacity 0.94 0.86, tag:im*
 windowrule = opacity 0.94 0.86, tag:multimedia*
 windowrule = opacity 0.9 0.8, tag:file-manager*
-windowrule = opacity 0.8 0.7, tag:terminal*
+windowrule = opacity 0.9 0.8, tag:terminal*
 windowrule = opacity 0.8 0.7, tag:settings*
 windowrule = opacity 0.82 0.75, tag:viewer*
 windowrule = opacity 0.9 0.7, tag:wallpaper*
@@ -227,3 +233,20 @@ layerrule = ignorealpha 0.5, quickshell:overview
 
 #layerrule = ignorezero, overview
 #layerrule = blur, overview
+
+
+# macOS-style window rules for Genie effect
+# Enhanced window rules for smoother animations
+windowrulev2 = animation fadeIn, class:^(.*)$, event:open
+windowrulev2 = animation fadeOut, class:^(.*)$, event:close
+
+# Special handling for specific apps
+windowrulev2 = animation popin 80%, class:^(firefox|chromium|code)$
+windowrulev2 = animation slide, class:^(thunar|nautilus)$
+
+windowrulev2 = animation popin 60%, onworkspace:special:minimized
+windowrulev2 = animation slide, onworkspace:special:minimized
+windowrulev2 = opacity 0.8, onworkspace:special:minimized
+
+# Make minimized windows clickable for restoration
+layerrule = noanim, ^(special:minimized)$
