--- a/hypr/configs/Keybinds.conf
+++ b/hypr/configs/Keybinds.conf
@@ -12,7 +12,7 @@ bind = CTRL ALT, Delete, exec, hyprctl dispatch exit 0 # exit Hyprland
 bind = $mainMod, Q, killactive, # close active (not kill)
 bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
 bind = $mainMod, L, exec, $scriptsDir/LockScreen.sh # screen lock(from ctrl+alt+l to win+l)
-bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh # power menu
+bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh # power me:qnu
 bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC notification panel
 bind = $mainMod SHIFT, E, exec, $scriptsDir/Kool_Quick_Settings.sh # Settings Menu KooL Hyprland Settings
 
@@ -23,7 +23,7 @@ bind = $mainMod, J, layoutmsg, cyclenext
 bind = $mainMod, K, layoutmsg, cycleprev
 bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
 
-# 紧急唤醒屏幕
+# Wake up screen forcibly
 bind = $mainMod CTRL SHIFT, G, exec, $scriptsDir/Wake.sh
 
 # Dwindle Layout
@@ -31,13 +31,13 @@ bind = $mainMod SHIFT, I, togglesplit # only works on dwindle layout
 bind = $mainMod, P, pseudo, # dwindle
 
 # Works on either layout (Master or Dwindle)
-bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
+# bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
 
 # group
 bind = $mainMod, G, togglegroup # toggle group
 bind = $mainMod CTRL, tab, changegroupactive  # change focus to another window
 
- # Cycle windows if floating bring to top
+# Cycle windows if floating bring to top
 bind = ALT, tab, cyclenext
 bind = ALT, tab, bringactivetotop  
 
